--- a/AndroidApp/app/src/main/res/values/colors.xml
+++ b/AndroidApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="synczepri">#1953FF</color>
+    <color name="synczesec">#1953FF</color>
+    <color name="yellow">#FFF873</color>
+    <color name="green">#C0FBA6</color>
 </resources>
