Updated application based on Sprint 3

--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:text="CURRENT LOCATION"
-                android:textColor="@color/synczesec"
+                android:textColor="@color/synczepri"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
                 android:layout_marginBottom="35dp"
                 android:gravity="center"
                 android:text="PAST RECORDS"
-                android:textColor="@color/synczesec"
+                android:textColor="@color/synczepri"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
