--- a/AndroidApp/app/src/main/res/layout/activity_past_map.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_past_map.xml
@@ -63,7 +63,7 @@
 
             <TextView
                 android:id="@+id/markerdescpastmap"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="20dp"
