--- a/AndroidApp/app/src/main/res/layout/activity_maps.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_maps.xml
@@ -37,6 +37,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:text="Create a Geofence by entering the address below. Only 1 geofence can be created at a time."
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +45,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/searchinputframe"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="200dp"
+                android:layout_width="180dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
@@ -66,8 +67,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/radiusinputframe"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="110dp"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 app:boxCornerRadiusBottomEnd="20dp"
